--- a/package.json
+++ b/package.json
@@ -12,11 +12,20 @@
     "@types/node": "18.11.10",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "date-fns": "^2.29.3",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.6",
+    "gray-matter": "^4.0.3",
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.1",
     "typescript": "4.9.3"
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.26",
+    "sass": "^1.56.1",
+    "styled-components": "^5.3.6"
   }
 }
